# subtle

./: .hgtags  AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  NEWS  README  Rakefile  SConstruct
config/: Makefile  Makefile.am  Makefile.in  SConscript  config.lua  dock.lua
contrib/: subtle.rb
contrib/man/: subtle.1  subtler.1  subtlext.1  sur.1  surserver.1
contrib/scripts/: dmenu.rb  example.rb  gtk.rb  migrate.rb
contrib/subtler/: runner.rb  subtler.rb
contrib/sur/: client.rb  runner.rb  server.rb  specification.rb  test.rb
data/: SConscript  config.lua  subtle.rb
data/man/: subtle.1  subtler.1  sur.1
data/subtler/: runner.rb
data/sur/: client.rb  runner.rb  server.rb  specification.rb  test.rb  version.rb
src/: .main.c.swp  Makefile  Makefile.am  Makefile.in  SConscript  array.c  client.c  display.c  event.c  ewmh.c  key.c  layout.c  log.c  lua.c  main.c  parent  ruby.c  rule.c  screen.c  sublet.c  subtle.h  subtler.c  tag.c  tile.c  util.c  view.c  win.c
src/.deps/: subtle-client.Po  subtle-display.Po  subtle-dock.Po  subtle-event.Po  subtle-log.Po  subtle-lua.Po  subtle-main.Po  subtle-screen.Po  subtle-sublet.Po  subtle-tile.Po  subtle-win.Po
src/shared/: shared.c  shared.h
src/subtle/: array.c  client.c  display.c  event.c  ewmh.c  grab.c  gravity.c  grid.c  hook.c  icon.c  key.c  layout.c  main.c  panel.c  pixmap.c  ruby.c  screen.c  style.c  sublet.c  subtle.c  subtle.h  tag.c  tray.c  util.c  view.c
src/subtler/: subtler.c
src/subtlext/: client.c  color.c  geometry.c  gravity.c  icon.c  screen.c  sublet.c  subtle.c  subtlext.c  subtlext.h  tag.c  tray.c  view.c  window.c
sublets/: Makefile  Makefile.am  Makefile.in  SConscript  battery.lua  clock.lua  loadavg.lua  notify.lua
subtle/: Makefile  Makefile.am  Makefile.in  aclocal.m4  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.in
subtle/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
subtle/scripts/: Makefile  Makefile.am  Makefile.in
test/: subtlext.rb  subtlext_suite.rb  test.rb  xserver.rb
test/contexts/: client.rb  color.rb  geometry.rb  gravity.rb  icon.rb  screen.rb  sublet.rb  subtle.rb  subtle_finish.rb  subtle_init.rb  tag.rb  tray.rb  view.rb
test/unit/: client_test.rb  fixnum_test.rb  gravity_test.rb  sublet_test.rb  subtle_test.rb  tag_test.rb  view_test.rb
